# protoAgent

./: .automaker-lock  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  PROTO.md  README.md  ROADMAP.md  TEMPLATE.md  THIRD_PARTY_LICENSES.md  a2a_auth.py  a2a_executor.py  a2a_handler.py  a2a_push_store.py  a2a_stores.py  a2a_task_store.py  audit.py  autostart.py  chat_ui.py  docker-compose.yml  egress.py  entrypoint.sh  hatch_build.py  metrics.py  package-lock.json  package.json  paths.py  pricing.py  pyproject.toml  requirements-core.txt  requirements-google.txt  requirements-ui.txt  requirements.txt  (+3 more)
.beads/: issues.jsonl
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/workflows/: checks.yml  desktop-build.yml  docker-publish.yml  docs.yml  issue-gate.yml  marketing-deploy.yml  prepare-release.yml  publish.yml  release.yml  roadmap-staleness.yml  secret-scan.yml
a2a_impl/: __init__.py  auth.py  executor.py  registry.py  stores.py
activity/: store.py
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/web/: .gitignore  components.json  index.html  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.ts  vitest.config.ts
background/: __init__.py  manager.py  store.py
beads/: __init__.py  store.py
config/: archetype-catalog.json  langgraph-config.example.yaml  langgraph-config.yaml  mcp-catalog.json  plugin-catalog.json  plugin-directory.yaml  theme.json
config/soul-presets/: base.md  blank.md  coding.md  cowork.md  design-system.md  generic-assistant.md  project-manager.md  research.md
config/uitest/: langgraph-config.yaml  secrets.yaml
deploy/openshell/: README.md  compose.yml  create-protoagent-sandbox.sh  gateway.toml
docs/: index.md
docs/.vitepress/: config.mts
docs/adr/: 0001-extensibility-and-plugin-architecture.md  0003-reactive-agent-activity-thread.md  0004-multi-instance-data-scoping.md  0005-tool-pollution-and-progressive-disclosure.md  0006-observability-and-the-self-improving-flywheel.md  0007-directory-aware-operator-agent.md  0008-sandboxing-and-openshell.md  (+85 more)
enforcement/: rate_limiter.py
evals/: README.md  client.py  judge.py  report.py  retrieval.py  retrieval_gold.yaml  runner.py  sweep.py  tasks.json  verify.py
events/: bus.py
graph/: agent.py  aside_op.py  cache_warmer.py  checkpoint_prune.py  checkpointer.py  compaction_op.py  components.py  config.py  config_explain.py  config_io.py  conversation_harvest.py  delegations.py  export_op.py  guardrails.py  knobs.py  llm.py  mcp_config.py  memory_facts.py  model_cli.py  model_window.py  multimodal.py  output_format.py  prompts.py  rewind_op.py  sdk.py  settings_schema.py  slash_commands.py  state.py  steering.py  supervisor.py  telemetry.py
inbox/: __init__.py  store.py
infra/: __init__.py  autostart.py  cache.py  media.py  node_runtime.py  paths.py  python_runtime.py
ingestion/: __init__.py  engine.py
knowledge/: __init__.py  backend.py  chunking.py  hybrid_store.py  layered.py  store.py  trust.py
observability/: __init__.py  audit.py  injection_log.py  logging_config.py  metrics.py  metrics_store.py  pricing.py  telemetry_store.py  trace_export.py  tracing.py
operator_api/: beads.py  chat_routes.py  config_routes.py  console_handlers.py  flags_routes.py  fleet_routes.py  github_routes.py  injection_routes.py  knowledge_routes.py  mcp_routes.py  memory_routes.py  node_routes.py  operations_routes.py  pairing_routes.py  paths.py  plugin_routes.py  python_routes.py  routes.py  runtime.py  runtime_routes.py  secrets_routes.py  subagents.py  telemetry_routes.py  theme_routes.py  web.py
ops/: __init__.py  cli.py  config.py  fleet.py  knowledge.py  plugins.py
protolabs_a2a/: README.md
runtime/: acp_agents.py  acp_runtime.py  cli.py  context.py  flags.py  node_install.py  operator_mcp_tools.py  python_install.py  state.py
scheduler/: __init__.py  interface.py  local.py  workstacean.py
scripts/: a2a_conformance.py  changelog.py  changelog_gate.sh  check_roadmap_staleness.py  dev-reset.sh  dev.sh  fake_openai_server.py  gen_attribution.py  gen_docs_nav.py  gen_openshell_policy.py  install.sh  live_smoke.py  plugin_directory.py  redact_fleet_traces.py  reset.sh  roadmap.py  setup_fleet_tracing.sh  sync_fleet_traces.sh  verify-macos-desktop.sh
security/: __init__.py  devices.py  egress.py  policy.py
server/: __init__.py  a2a.py  agent_init.py  chat.py  cli.py  knowledge_cli.py  media.py  operator_mcp.py
static/: manifest.json
tasks/: __init__.py  store.py
tests/: conftest.py  test_a2a_auth.py  test_a2a_card_identity.py  test_a2a_handler.py  test_a2a_integration.py  test_a2a_parse.py  test_a2a_push_store.py  test_a2a_stores.py  test_a2a_task_store.py  test_acp_reaping.py  test_acp_runtime.py  test_activity.py  test_activity_feed.py  test_artifact_plugin.py  test_aside_op.py  test_atomic_writes.py  test_audit_hardening.py  test_autostart.py  test_background.py  test_background_results.py  test_background_work.py  test_beads_store.py  test_bundled_config_assets.py  test_cache.py  test_cache_warmer.py  test_changelog.py  test_changelog_gate.py  test_chat_example_plugin.py  test_chat_nonstreaming_robustness.py  test_chat_routes.py  test_chat_stream_finalization.py  test_chat_surface.py  test_checkpoint_prune.py  test_checkpointer.py  test_chunking.py  test_cli.py  test_code_review_workflow.py  test_coder_plugin.py  test_coding_agent_plugin.py  test_compaction_middleware.py  (+257 more)
tools/: discord_tools.py  execute_code.py  fs_tools.py  gh_cli.py  gh_issue.py  github_tools.py  lg_tools.py  mcp_session_pool.py  mcp_tools.py  notes_tools.py  peer_tools.py  shell.py
workflows/: research-and-brief.yaml
(+696 files in other folders)
