[project]
name = "protoagent"
version = "0.2.1"
description = "protoAgent — LangGraph + A2A template for spawning protoLabs agents"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# importlib mode avoids the legacy prepend importer's per-module
# sys.path[0] insertion, which on Python 3.12 shadowed the installed
# langchain_core during collection (see checks.yml history, PR #171).
addopts = "--import-mode=importlib"
