[project]
name = "protoagent"
version = "0.57.0"
description = "protoAgent — LangGraph + A2A template for spawning protoLabs agents"
requires-python = ">=3.11"

# Single source of truth for runtime deps. The `requirements-*.txt` files are
# kept as readable, tier-scoped references (ADR 0010) but no longer the source
# of truth: `requirements.txt` is a thin `-e .` that routes pip through this
# table, and `uv sync` reads it directly. Keep these lists in step with
# requirements-core.txt — CI installs via pyproject.
#
# core (the `none`/`console` tiers) — mirrors requirements-core.txt:
dependencies = [
  "httpx>=0.27",
  "a2a-sdk[http-server,fastapi,sqlite]>=1.1",
  "protolabs-a2a @ git+https://github.com/protoLabsAI/protolabs-a2a.git@v0.2.0",
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
  "langfuse>=3.0",
  "prometheus-client>=0.20",
  "pyyaml>=6.0",
  # imported directly by graph/plugins/loader.py (min_protoagent_version gate);
  # was previously only a transitive dep (a2a-sdk, langchain-core, langfuse).
  "packaging>=23.2",
  "ruamel.yaml>=0.18",
  "websockets>=12.0",
  "langchain>=1.2.3",
  "langchain-core>=1.0",
  "langgraph>=1.1.0",
  "langchain-openai>=1.0",
  "langgraph-checkpoint-sqlite>=2.0",
  "langchain-mcp-adapters>=0.2,<0.3",
  "mcp>=1.2",
  "ddgs>=9.0",
  "beautifulsoup4>=4.12",
  "croniter>=2.0",
  "filelock>=3.12",
  "zeroconf>=0.131",
  # Document ingestion engine (ADR 0021) — light pure-Python extractors:
  "pypdf>=4.0",                  # PDF → text
  "youtube-transcript-api>=1.0", # YouTube captions → text (1.x instance API)
  # Markdown → HTML for the `docs` plugin's reader view (server-side render, offline).
  "markdown-it-py>=3.0",
]

[build-system]
# Needed so `pip install -e .` / `uv pip install -e .` can build the project and
# route through the dependency table above. This is a flat-layout application
# (modules at the repo root + top-level packages), not a distributable library,
# so the wheel target below lists the importable surface explicitly.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# protolabs-a2a is a direct git reference (PEP 508 `pkg @ git+https://…`).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Top-level packages (dirs with __init__.py). The former root-level runtime modules
# were grouped into cohesive packages: a2a_impl/ (A2A auth/executor/stores — named to
# avoid shadowing the a2a-sdk's `a2a`), observability/ (metrics/tracing/telemetry/
# pricing/audit), security/ (egress/policy), and infra/ (paths/cache/autostart).
# Excludes apps/, sites/, static/, docs/, deploy/, scripts/, examples/, config/,
# mcp_servers/ and tests/ — those aren't part of the import surface a wheel needs.
packages = [
  "a2a_impl",
  "activity",
  "beads",
  "enforcement",
  "evals",
  "events",
  "graph",
  "inbox",
  "infra",
  "ingestion",
  "knowledge",
  "observability",
  "operator_api",
  "runtime",
  "scheduler",
  "security",
  "server",
  "tools",
]

[tool.uv]
# The app runs from the repo root (pythonpath = ["."] below); an editable build
# isn't required for `uv run`/`uv sync` to put deps on the path. Building the
# wheel target on every sync is unnecessary overhead, so don't treat the project
# itself as a package for uv's workspace install — `uv sync` installs only the
# declared dependencies. `pip install -e .` / `uv pip install -e .` still build
# via the [build-system] above.
package = false

[tool.importlinter]
# Architectural import contracts (enforced by `lint-imports` in CI — see
# .github/workflows/checks.yml and docs/dev/prod-readiness-tasklist.md § C2).
# Layering: graph/ (agent brain) and the infra packages (a2a_impl/observability/
# security/infra/tools/knowledge/events/scheduler/runtime) must never reach up into
# the server bootstrap or the operator HTTP surface. import-linter analyzes function-level (lazy)
# imports too, so the `ignore_imports` lists below are explicit grandfathered
# violations — a BURNDOWN LIST, not an allowance. Don't add to them; remove
# entries as the cycles are untangled (the server.agent_init decomposition,
# tasklist C2, owns most of the burndown).
root_packages = [
  "a2a_impl",
  "events",
  "graph",
  "infra",
  "ingestion",
  "knowledge",
  "observability",
  "operator_api",
  "runtime",
  "scheduler",
  "security",
  "server",
  "tools",
]

[[tool.importlinter.contracts]]
name = "graph does not import server or operator_api"
type = "forbidden"
source_modules = ["graph"]
forbidden_modules = ["server", "operator_api"]
# Burndown: skills CLI reaches into server bootstrap for seed paths (lazy import).
ignore_imports = [
  "graph.skills.cli -> server.agent_init",
]

[[tool.importlinter.contracts]]
name = "operator_api does not import server"
type = "forbidden"
source_modules = ["operator_api"]
forbidden_modules = ["server"]
# Burndown: the route modules still pull settings-apply + chat internals out of
# the server package (server/__init__ imports operator_api.* lazily inside
# _main, so these are the other half of the server↔operator_api ring).
ignore_imports = [
  "operator_api.chat_routes -> server",
  "operator_api.chat_routes -> server.agent_init",
  "operator_api.chat_routes -> server.chat",
  "operator_api.config_routes -> server.agent_init",
  "operator_api.console_handlers -> server",
  "operator_api.mcp_routes -> server.agent_init",
  "operator_api.plugin_routes -> server.agent_init",
]

[[tool.importlinter.contracts]]
name = "infra packages do not import server or operator_api"
type = "forbidden"
source_modules = [
  "a2a_impl", "events", "infra", "ingestion", "knowledge", "observability",
  "runtime", "scheduler", "security", "tools",
]
forbidden_modules = ["server", "operator_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "apps", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
# pyflakes (F) catches the real bugs — unused/undefined names; pycodestyle (E/W)
# + isort (I) for hygiene. The stylistic rules the codebase intentionally and
# pervasively uses are ignored rather than churned: lazy/late imports (E402),
# semicolon/lambda style (E702/E731), and the bare-except guard form (E722 is
# kept; bare `except:` is genuinely banned here).
select = ["E", "F", "W"]
ignore = [
  "E402",  # module-level import not at top — late/lazy imports are idiomatic here
  "E501",  # line-too-long — long, readable comment lines are intentional
  "E702",  # multiple statements on one line (semicolon) — used deliberately
  "E731",  # lambda assignment — used deliberately in a few places
  "E741",  # ambiguous var name (l/O/I) — occasional, harmless
]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export submodule symbols (esp. server/__init__.py,
# which re-exports the whole public surface for the test suite) — F401 there is
# intentional, not dead code.
"**/__init__.py" = ["F401"]
