[package]
name = "protoagent_desktop"
version = "0.1.0"
description = "protoAgent desktop operator console"
authors = ["protoLabs.studio"]
license = "MIT"
repository = "https://github.com/protoLabsAI/protoAgent"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "protoagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `macos-private-api` enables the transparent launcher window (paired with
# app.macOSPrivateApi in tauri.conf.json) — used for the frosted/rounded launcher.
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "devtools", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
# External links open in the system browser via the opener plugin; the shell
# plugin stays for the sidecar (its `open` is deprecated in favor of opener).
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
# Desktop chat streaming: WKWebView can't read a streaming fetch body, so the
# `chat_stream` command runs the /a2a SSE POST here and relays chunks to the
# webview. Local sidecar is http://127.0.0.1, so no TLS backend needed.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
futures-util = "0.3"
